--- a/app/src/main/res/layout/activity_add_book_page.xml
+++ b/app/src/main/res/layout/activity_add_book_page.xml
@@ -132,7 +132,7 @@
         android:layout_marginBottom="74dp"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="@string/addBook"
+        android:hint="@string/rentHint2"
         android:importantForAutofill="no"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/btnAddNewBook"
