search books bease on status is done..

--- a/app/src/main/res/layout/activity_find_book.xml
+++ b/app/src/main/res/layout/activity_find_book.xml
@@ -48,17 +48,6 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/availBook_RecycleView"
-        android:layout_width="394dp"
-        android:layout_height="336dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="9dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSortOption" />
-
     <Spinner
         android:id="@+id/searchBookSpinner"
         android:layout_width="397dp"
@@ -81,6 +70,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchBookSpinner" />
+
+    <ListView
+        android:id="@+id/availBookListView"
+        android:layout_width="392dp"
+        android:layout_height="315dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSortOption" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
