--- a/app/src/main/res/layout/activity_find_book.xml
+++ b/app/src/main/res/layout/activity_find_book.xml
@@ -17,10 +17,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPostalCode" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/txtPostalCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -43,8 +43,8 @@
         android:layout_marginEnd="16dp"
         android:text="@string/findBook_BTN_Search"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtPostalCode"
+        app:layout_constraintEnd_toStartOf="@+id/txtPostalCode"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
 
