--- a/app/src/main/res/layout/activity_update_book.xml
+++ b/app/src/main/res/layout/activity_update_book.xml
@@ -75,27 +75,12 @@
         app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Title" />
 
     <EditText
-        android:id="@+id/txtRentPrice"
-        android:layout_width="130dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/text_border"
-        android:ems="10"
-        android:hint="@string/totalCost"
-        android:importantForAutofill="no"
-        android:inputType="number"
-        android:padding="5dp"
-        android:textColorHint="#757575"
-        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Publication" />
-
-    <EditText
         android:id="@+id/txtWeekCost"
         android:layout_width="130dp"
         android:layout_height="51dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="69dp"
         android:background="@drawable/text_border"
         android:ems="10"
         android:hint="@string/rentHint"
@@ -103,45 +88,45 @@
         android:inputType="number"
         android:padding="5dp"
         android:textColorHint="#757575"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/optionsGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtRentPrice" />
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Publication" />
 
     <RadioGroup
         android:id="@+id/optionsGroup"
-        android:layout_width="126dp"
-        android:layout_height="193dp"
+        android:layout_width="140dp"
+        android:layout_height="277dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Author">
-
         <RadioButton
-            android:id="@+id/rd_ShareBtn"
+            android:id="@+id/rd_Rent"
             android:layout_width="match_parent"
             android:layout_height="51dp"
             android:background="@drawable/radio_selected"
             android:button="@null"
             android:gravity="center"
-            android:textStyle="bold"
-            android:text="@string/share"
+            android:text="@string/rent"
             android:textColor="#D7CCC8"
-            tools:ignore="DuplicateSpeakableTextCheck" />
-
+            android:textStyle="bold" />
         <RadioButton
-            android:id="@+id/rd_Rent"
-            android:textStyle="bold"
+            android:id="@+id/rd_ShareBtn"
             android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/radio_selected"
             android:button="@null"
             android:gravity="center"
-            android:text="@string/rent"
-            android:textColor="#D7CCC8" />
+            android:text="@string/share"
+            android:textColor="#D7CCC8"
+            android:textStyle="bold"
+            tools:ignore="DuplicateSpeakableTextCheck" />
+
+
 
         <RadioButton
             android:id="@+id/rdUpdate_GiveAway"
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_marginTop="20dp"
@@ -149,7 +134,20 @@
             android:button="@null"
             android:gravity="center"
             android:text="@string/giveaway"
-            android:textColor="#D7CCC8" />
+            android:textColor="#D7CCC8"
+            android:textStyle="bold" />
+
+        <RadioButton
+            android:id="@+id/rdUpdate_Unavailable"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/radio_selected"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/unavailable"
+            android:textColor="#D7CCC8"
+            android:textStyle="bold" />
     </RadioGroup>
 
     <Button
@@ -157,52 +155,14 @@
         android:layout_width="381dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="162dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="256dp"
         android:layout_marginEnd="162dp"
         android:background="@color/btnColor"
         android:text="@string/btnUpdate"
         app:backgroundTint="@color/btnColor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtWeekCost" />
 
-    <Spinner
-        android:id="@+id/shareSpinner"
-        android:layout_width="110dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/text_border"
-        android:entries="@array/status"
-        android:spinnerMode="dropdown"
-        app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/txtRentPrice"
-        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Year"
-        tools:ignore="DuplicateSpeakableTextCheck" />
-
-    <Spinner
-        android:id="@+id/shareSpinner2"
-        android:layout_width="110dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/text_border"
-        android:entries="@array/status"
-        android:spinnerMode="dropdown"
-        app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/txtWeekCost"
-        app:layout_constraintTop_toBottomOf="@+id/shareSpinner" />
-
-    <Spinner
-        android:id="@+id/avail_or_Not"
-        android:layout_width="110dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="19dp"
-        android:background="@drawable/text_border"
-        android:entries="@array/status"
-        android:spinnerMode="dropdown"
-        app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtWeekCost" />
 </androidx.constraintlayout.widget.ConstraintLayout>
