--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -5,25 +5,26 @@
     android:orientation="horizontal">
 
     <TextView
-        android:layout_width="240dp"
-        android:layout_height="50dp"
         android:id="@+id/bookTitle"
-        android:textSize="20sp"
+        android:layout_width="240dp"
+        android:layout_height="60dp"
         android:layout_marginStart="30dp"
+        android:gravity="center"
         android:textColor="#1976D2"
-        android:gravity="center">
+        android:textSize="18sp">
 
     </TextView>
+
     <TextView
-        android:layout_width="120dp"
-        android:layout_height="50dp"
         android:id="@+id/bookStatus"
-        android:textSize="18sp"
-        android:background="#1976D2"
-        android:textColor="@color/white"
-        android:textAlignment="center"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="20dp"
-        android:gravity="center">
+        android:background="#1976D2"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="18sp">
 
     </TextView>
 
