--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -8,34 +8,44 @@
 
 
     <Button
-        android:id="@+id/btnAddBook"
-        android:layout_width="179dp"
-        android:layout_height="163dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginEnd="116dp"
-        android:background="@drawable/rounded_button"
-        android:text="@string/addBook"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:backgroundTint="@color/btnColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btnUpdateBook"
         android:layout_width="179dp"
         android:layout_height="163dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="156dp"
         android:background="@drawable/rounded_button"
         android:text="@string/updateBook"
         android:textSize="16sp"
         android:textStyle="bold"
         app:backgroundTint="@color/btnColor"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btnAddBook"
+        android:layout_width="179dp"
+        android:layout_height="163dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="95dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/addBook"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/btnColor"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAddBook" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnReplyRequest"
+        android:layout_width="179dp"
+        android:layout_height="163dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="156dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/reply_Request"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/btnColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
