--- a/app/src/main/res/layout/activity_find_book.xml
+++ b/app/src/main/res/layout/activity_find_book.xml
@@ -48,28 +48,17 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Spinner
-        android:id="@+id/searchBookSpinner"
-        android:layout_width="397dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="7dp"
-        android:background="#E1D6D6"
-        android:entries="@array/bookOptions"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/findBook_label" />
-
     <Button
         android:id="@+id/btnSortOption"
         android:layout_width="95dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="78dp"
         android:layout_marginEnd="300dp"
         android:text="@string/sortOptionBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBookSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/findBook_label" />
 
     <ListView
         android:id="@+id/availBookListView"
@@ -83,6 +72,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSortOption" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="43dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/findBook_label" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
