--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddBook">
-
+    <include layout="@layout/toolbar"/>
 
     <Button
         android:id="@+id/btnUpdateBook"
