--- a/app/src/main/res/layout/activity_admin_home_page.xml
+++ b/app/src/main/res/layout/activity_admin_home_page.xml
@@ -6,4 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".AdminHomePage">
 
+    <Button
+        android:id="@+id/btn_Admin_CreateUser"
+        android:layout_width="179dp"
+        android:layout_height="163dp"
+        android:layout_marginTop="114dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/admin_createUser"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/btnColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_admin_SendMessage"
+        android:layout_width="179dp"
+        android:layout_height="163dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="148dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/admin_sendMessage"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/btnColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_admin_ManageUser"
+        android:layout_width="179dp"
+        android:layout_height="163dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="148dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/admin_manageUser"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="@color/btnColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
