--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -4,25 +4,26 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
-        android:layout_width="240dp"
+        android:layout_width="70dp"
         android:layout_height="50dp"
-        android:textSize="20sp"
         android:layout_marginStart="30dp"
+        android:textSize="18sp"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:id="@+id/recycleview_title">
+        android:id="@+id/recycleview_ID">
 
     </TextView>
     <TextView
-        android:layout_width="120dp"
+        android:layout_width="270dp"
         android:layout_height="50dp"
+        android:textSize="20sp"
         android:layout_marginEnd="20dp"
-        android:textSize="18sp"
-        android:textAlignment="center"
-        android:background="#1976D2"
-        android:textColor="@color/white"
-        android:id="@+id/recycleview_stutus">
+
+        android:textColor="@color/black"
+        android:id="@+id/recycleview_Email">
 
     </TextView>
+
 
 
 
